feat(sections): add new paths and success sections to index.html, update styles in index.css for better layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
             <span class="label">اپلیکیشن</span>
         </button>
 
+        
+
         <button class="dot" data-target="#pricing" aria-label="قیمت">
             <span class="label">دریافت دوره</span>
         </button>
@@ -166,7 +168,7 @@
             <img class="slide slide-3" src="https://ahmadrezafs.arvanvod.ir/Okn5BO4ZQ6/qrVJ7GJABM/origin_EYfA5RjVIGoIuSCgeJ2wZx8zr1SyQEztYrlSWzHW.mp4" alt="Video 3"
             style="object-fit: contain; width: 20%;height:75%"> -->
             <img class="slide slide-1 active" src="./assets/images/slide-1-min.png">
-            <img class="slide slide-2" src="./assets/images/slide-2-min.png">
+            <img class="slide slide-2" src="./assets/images/slide-2.jpg">
             <img class="slide slide-3" src="./assets/images/slide-3.jpg">
         </div>
 
@@ -816,7 +818,7 @@
             همین حالا به تمام تمرین‌ها و محتواهای منحصر‌به‌فرد هنر قهرمانان و همه مزایای دیگر دسترسی پیدا کنید:
           </p>
           <ul class="aoc-offer-list">
-            <li>✔ هنر بادی‌فینتس <span class="old-price">۱۸ میلیون</span></li>
+            <li>✔ هنر فریب بدن <span class="old-price">۱۸ میلیون</span></li>
             <li>✔ هنر پا عوض کردن <span class="old-price">۱۲ میلیون</span></li>
             <li>✔ هنر خلاقیت <span class="old-price">۳۶ میلیون</span></li>
             <li>✔ هنر سبک وی <span class="old-price">۱۸ میلیون</span></li>
@@ -829,6 +831,114 @@
           </div>
           <div class="aoc-offer-final-price">
             فقط <strong>۱۵ میلیون تومان</strong> 
+          </div>
+        </div>
+      </section>
+
+
+      <section class="aoc-paths-section" id="app">
+        <div class="aoc-paths-box">
+          <h3 class="aoc-paths-title">دو مسیر، یک انتخاب</h3>
+          <div class="aoc-paths-list-wrap">
+            <p class="aoc-paths-caption">شما می‌توانید این راه را انتخاب کنید و:</p>
+            <ul class="aoc-paths-list">
+              <li><span class="aoc-x-icon">✖</span> یک مربی گران‌قیمت بگیرید که تمرین‌های پیچیده‌ای به فرزندتان بدهد که حتی متوجه نشود.</li>
+              <li><span class="aoc-x-icon">✖</span> ناامید شوید چون پیشرفتی نمی‌بینید.</li>
+              <li><span class="aoc-x-icon">✖</span> با هزینه‌هایی که کرده‌اید، احساس پشیمانی و دلسردی کنید.</li>
+              <li><span class="aoc-x-icon">✖</span> احساس مسئولیت کنید بابت دلسردی و افت اعتماد به نفس کودک‌تان و از دست دادن علاقه به فوتبال.</li>
+              <li><span class="aoc-x-icon">✖</span> عذاب وجدان بگیرید که شاید نتوانستید به رویاهای فرزندتان کمک کنید.</li>
+              <li><span class="aoc-x-icon">✖</span> نگران باشید که فرصت‌های آینده را فقط به‌خاطر مهارت پایین دریبل، از دست بدهد.</li>
+            </ul>
+            <button class="aoc-no-result-btn" disabled>بدون نتیجه مطلوب</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="aoc-success-section" id="app">
+        <div class="aoc-success-box">
+          <h3 class="aoc-success-title">
+            یا می‌توانید <span class="aoc-link">“هنر قهرمانان</span> را تهیه کنید و
+          </h3>
+          <ul class="aoc-success-list">
+            <li><span class="aoc-check-icon">✔</span> در عرض چند هفته، پیشرفت واقعی فرزندتان را ببینید.</li>
+            <li><span class="aoc-check-icon">✔</span> شاهد دریبل زدن فرزندتان از رقبا و درخشش در زمین باشید.</li>
+            <li><span class="aoc-check-icon">✔</span> اعتمادبه‌نفس و برتری فرزندتان را میان هم‌سن و سال‌ها ببینید.</li>
+            <li><span class="aoc-check-icon">✔</span> استعدادیاب‌ها به خاطر دریبل فرزندتان به شما پیام دهند.</li>
+            <li><span class="aoc-check-icon">✔</span> شاهد آینده‌ای باشید که فرزندتان در مسیر قهرمانان مورد علاقه‌اش حرکت می‌کند.</li>
+          </ul>
+          <div >
+            <a href=" #pricing" class="aoc-success-btn" style="text-align: center;">دریافت کامل بسته فقط با ۱۵ میلیون تومان</a>
+
+          </div>
+        </div>
+      </section>
+
+
+      <section class="aoc-faq-section">
+        <h2 class="aoc-faq-title">سوالات متداول</h2>
+        <div class="aoc-faq-list">
+          <div class="aoc-faq-item">
+            <span class="aoc-faq-icon">✖</span>
+            <div>
+              <p class="aoc-faq-q">پکیج هنر قهرمانان مناسب چه سنیه؟</p>
+              <p class="aoc-faq-a">۷ تا ۱۵ سال. درواقع هنر قهرمانان برای همه‌ست! حتی بازیکنای حرفه‌ای و بچه‌های ۵ ساله هم استفاده می‌کنن.</p>
+            </div>
+          </div>
+          <div class="aoc-faq-item">
+            <span class="aoc-faq-icon">✖</span>
+            <div>
+              <p class="aoc-faq-q">چند هفته تمرین داره؟</p>
+              <ul class="aoc-faq-extra-list">
+                <li>فریب بدن: ۳ هفته</li>
+                <li>پا عوض کردن: ۲ هفته</li>
+                <li>سبک V: ۴ هفته</li>
+                <li>حرکات ویژه: ۴ هفته</li>
+                <li>خلاقیت: ۶ هفته</li>
+              </ul>
+              <p class="aoc-faq-a">ولی فقط ۱۹ هفته نیست؛ می‌تونی هرزمان خواستی دوباره تمرین کنی!</p>
+            </div>
+          </div>
+          <div class="aoc-faq-item">
+            <span class="aoc-faq-icon">✖</span>
+            <div>
+              <p class="aoc-faq-q">این پکیج به چه زبانیه؟</p>
+              <p class="aoc-faq-a">الان انگلیسی و آلمانی و فارسی داره، اسپانیایی هم به زودی میاد.</p>
+            </div>
+          </div>
+          <div class="aoc-faq-item">
+            <span class="aoc-faq-icon">✖</span>
+            <div>
+              <p class="aoc-faq-q">از کجا می‌شه خرید؟</p>
+              <p class="aoc-faq-a">از هرجای دنیا؛ فقط با کارت بانکی یا پی‌پال.</p>
+            </div>
+          </div>
+          <div class="aoc-faq-item">
+            <span class="aoc-faq-icon">✖</span>
+            <div>
+              <p class="aoc-faq-q">بعد از خرید، چطوری به تمرین‌ها دسترسی دارم؟</p>
+              <p class="aoc-faq-a">بعد از خرید موفق، ایمیل لینک تمرینات برات میاد (اسپم رو هم چک کن!).</p>
+            </div>
+          </div>
+          <div class="aoc-faq-item">
+            <span class="aoc-faq-icon">✖</span>
+            <div>
+              <p class="aoc-faq-q">دسترسی همیشگیه؟</p>
+              <p class="aoc-faq-a">بله! همیشه و روی هر دستگاهی (گوشی، تبلت، لپ‌تاپ) قابل دسترسه.</p>
+            </div>
+          </div>
+          <div class="aoc-faq-item">
+            <span class="aoc-faq-icon">✖</span>
+            <div>
+              <p class="aoc-faq-q">همه‌ی بخش‌ها رو دارم؟</p>
+              <ul class="aoc-faq-extra-list">
+                <li> فریب بدن</li>
+                <li>پا عوض کردن</li>
+                <li>سبک V</li>
+                <li>خلاقیت</li>
+                <li>حرکات ویژه</li>
+                <li>اپلیکیشن هنر قهرمانان</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -877,7 +987,7 @@
             </div>
 
             <div class="app-cta">
-                <a href="#pricing" class="cta-button">دریافت اپلیکیشن</a>
+                <a href=" #pricing" class="cta-button">دریافت اپلیکیشن</a>
             </div>
         </div>
     </section>
