feat(index): update index.html with new offer and paths sections, enhance styles in index.css for improved layout and responsiveness, and add a floating purchase button

--- a/order.html
+++ b/order.html
@@ -353,23 +353,23 @@
               </div>
             </div>
             
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label>روش تماس</label>
               <div class="toggle-wrapper" id="contactToggle" data-selected="email">
                 <div class="toggle-glider"></div>
                 <div class="toggle-option active" data-value="email">ایمیل</div>
                 <div class="toggle-option" data-value="mobile">شماره موبایل</div>
               </div>
-            </div>
+            </div> -->
   
             <div class="input-anim-container">
-              <div class="contact-input-group active" id="group-email">
+              <!-- <div class="contact-input-group active" id="group-email">
                 <div class="form-group">
                   <label for="email">ایمیل</label>
                   <input id="email" name="email" type="email" placeholder="ali@example.com" />
                 </div>
-              </div>
-              <div class="contact-input-group" id="group-mobile">
+              </div> -->
+              <div class="contact-input-group active" id="group-mobile">
                 <div class="form-group">
                   <label for="mobile_number">شماره موبایل</label>
                   <input id="mobile_number" name="mobile_number" inputmode="tel" placeholder="09123456789" />
