refactor(index): update index.html to translate content into Persian, enhance FAQ section, and modify payment method description

--- a/index.html
+++ b/index.html
@@ -975,16 +975,16 @@
           <div class="aoc-desc animate-fade-up" style="animation-delay:0.4s;">
             حالا تصور کنید فرزند شما بتواند به تمام تمرینات Art of Champions دسترسی داشته باشد…
             <ul>
-              <li>Art of Body Feints</li>
-              <li>Art of Stepovers</li>
-              <li>Art of Creativity</li>
+              <li>هنر فریب بدن</li>
+              <li>هنر پا عوض کردن</li>
+              <li>هنر خلاقیت</li>
               <li>و خیلی موارد دیگر…</li>
             </ul>
             <span>همه در یک اپلیکیشن واحد.<br>و بدون اینکه نگران مواجهه او با محتوای نامناسب باشید.</span>
             <strong>عالی نیست؟</strong>
             <p>
-              به همین دلیل اپلیکیشن Art of Champions ساخته شده است.<br>
-              فرزند شما می‌تواند به تمام محتوای Art of Champions دسترسی داشته باشد:
+              به همین دلیل اپلیکیشن هنر قهرمانان ساخته شده است.<br>
+              فرزند شما می‌تواند به تمام محتوای هنر قهرمانان دسترسی داشته باشد:
               <br>راهنمای کامل تمرین‌ها…
               <br>نکات کاربردی برای تمرین…
             </p>
@@ -1411,7 +1411,7 @@
             
             <div>
               <p class="aoc-faq-q">از کجا می‌شه خرید؟</p>
-              <p class="aoc-faq-a">از هرجای دنیا؛ فقط با کارت بانکی یا پی‌پال.</p>
+              <p class="aoc-faq-a">از هرجای دنیا؛ فقط با کارت بانکی.</p>
             </div>
           </div>
           <div class="aoc-faq-item">
@@ -1433,11 +1433,11 @@
             <div>
               <p class="aoc-faq-q">همه‌ی بخش‌ها رو دارم؟</p>
               <ul class="aoc-faq-extra-list">
-                <li> فریب بدن</li>
-                <li>پا عوض کردن</li>
-                <li>سبک V</li>
-                <li>خلاقیت</li>
-                <li>حرکات ویژه</li>
+                <li> هنر فریب بدن</li>
+                <li>هنر پا عوض کردن</li>
+                <li>هنر سبک وی</li>
+                <li>هنر خلاقیت</li>
+                <li>هنر حرکت</li>
                 <li>اپلیکیشن هنر قهرمانان</li>
               </ul>
             </div>
